fix: keep background whitespaces (#1131)
* fix: keep background whitespaces

* chore: account for px variations in CI/CD

* chore: account for variations again

* chore: take into account CI/CD variation

* chore: account for CI/CD variations but in width omg

* chore: should get a coffee by now

* chore: now once for all eventually

--- a/src/app/background/background.component.scss
+++ b/src/app/background/background.component.scss
@@ -15,11 +15,11 @@ svg {
 
 svg {
   font-size: 16px;
+  @include typographies.monospace-font;
 
-  pattern {
+  text {
     white-space: pre;
     fill: var(--background-fg-color);
-    @include typographies.monospace-font;
     @include animations.when-motion {
       @include animations.single-transition(fill, animations.$emphasized-style);
     }
